--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,5 +21,8 @@
     "react-dom": "18.2.0",
     "react-redux": "^8.1.1",
     "typescript": "5.1.3"
+  },
+  "devDependencies": {
+    "@svgr/webpack": "^8.0.1"
   }
 }
